--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -58,3 +58,12 @@ body {
     }
   }
 }
+
+/* User register page */
+.register-page {
+  img.captcha {
+    margin-bottom: 0;
+    margin-top: 10px;
+    cursor: pointer;
+  }
+}
